minor css changes     1. reduced the letter spacing of body text;     2. added code to deal with caption of figures;     3. fixed the display of figure on smartphones;

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   hyphens: auto;
   color: #101010;
   font-size: 16px;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.2px;
 }
 
 /* Headings */
@@ -20,6 +20,8 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 22px;
+  font-weight: 700;
+  letter-spacing: 0;
 }
 
 h2, h3, h4, h5, h6 {
@@ -81,11 +83,24 @@ li ol, li ul {
 
 /* Images */
 
+figure {
+  margin: 20px;
+}
+
+figcaption:before {
+  content: "FIG";
+  margin-right: 5px;
+  font-weight: 600; 
+}
+
+figcaption{
+  margin: 4px 0;
+  font-weight: 300; 
+ }
+
 img {
   display: block;
-  width: 90%;
-  margin: 20px auto;
-  margin-bottom: 5px;
+  width: 100%;
 }
 
 /* Code CSS */
@@ -115,6 +130,7 @@ p code {
 table {
   margin: 25px auto;
   border-collapse: collapse;
+  overflow-x: auto;
 }
 
 th {
@@ -248,8 +264,8 @@ footer {
     margin: 0;
   }
 
-  img {
-    margin: 15px auto;
+  figure {
+    margin: 20px 10px;
   }
 
   .post-list {
